--- a/problems.ipynb
+++ b/problems.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -51,11 +51,95 @@
     "     \n",
     "    Args:\n",
     "        x, y, z: 32-bit unsigned integers\n",
-    "    \n",
     "    Returns:\n",
     "        np.uint32: Result of x XOR y XOR z\n",
-    "        \n",
-    "    \"\"\"                     \n"
+    "    \"\"\"\n",
+    "    # Convert all inputs to 32-bit unsigned integers\n",
+    "    x, y, z = np.uint32(x), np.uint32(y), np.uint32(z)\n",
+    "    # Perform XOR operation on all three values\n",
+    "    return np.uint32(x ^ y ^ z)  \n",
+    "# ----------------------------------------------------------------------------\n",
+    "# PART 2: Choice (Ch) Function\n",
+    "# ----------------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "def Ch(x, y, z):\n",
+    "    \"\"\"\n",
+    "    Choice function from SHA-256 specification.\n",
+    "    \n",
+    "    For each bit position, chooses bit from y if x is 1,\n",
+    "    otherwise chooses bit from z.\n",
+    "    \n",
+    "    Formula: (x ∧ y) ⊕ (¬x ∧ z)\n",
+    "    \n",
+    "    Used in: SHA-256 compression function (Step 1 of each round)\n",
+    "    \n",
+    "    Args:\n",
+    "        x, y, z: 32-bit unsigned integers\n",
+    "    \n",
+    "    Returns:\n",
+    "        np.uint32: Result of the choice operation\n",
+    "    \"\"\"\n",
+    "    # Convert all inputs to 32-bit unsigned integers\n",
+    "    x, y, z = np.uint32(x), np.uint32(y), np.uint32(z)\n",
+    "    # Where x is 1, choose y; where x is 0, choose z\n",
+    "    return np.uint32((x & y) ^ (~x & z))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "55444694",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parity(12, 10, 6) = 0\n",
+      "Binary: 0b0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the Parity function\n",
+    "x = np.uint32(0b1100)\n",
+    "y = np.uint32(0b1010)\n",
+    "z = np.uint32(0b0110)\n",
+    "\n",
+    "result = Parity(x, y, z)\n",
+    "print(f\"Parity({x}, {y}, {z}) = {result}\")\n",
+    "print(f\"Binary: {bin(result)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1c6a4070",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ch(12, 10, 6) = 10\n",
+      "Binary: 0b1010\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the Ch function\n",
+    "x = np.uint32(0b1100)\n",
+    "y = np.uint32(0b1010)\n",
+    "z = np.uint32(0b0110)\n",
+    "\n",
+    "result = Ch(x, y, z)\n",
+    "print(f\"Ch({x}, {y}, {z}) = {result}\")\n",
+    "print(f\"Binary: {bin(result)}\")"
    ]
   }
  ],
