--- a/problems.ipynb
+++ b/problems.ipynb
@@ -7,13 +7,19 @@
    "source": [
     "# Problem 1: Binary Words and Operations\n",
     "\n",
-    "Implement the following functions in Python. Use numpy to ensure that all variables and values are treated as 32-bit integers. These functions are defined in the Secure Hash Standard (see page 10).\n",
+    "## Introduction\n",
+    "\n",
+    "This problem implements seven core bitwise functions used in the SHA-256 cryptographic hash algorithm, as defined in the FIPS 180-4 Secure Hash Standard. SHA-256 is widely used in security applications like SSL/TLS, Bitcoin, and digital signatures. These functions perform bitwise operations on 32-bit words to create the confusion and diffusion properties essential for cryptographic security. The logical functions (Ch, Maj, Parity) operate on individual bits, while the rotation functions (Sigma and sigma) combine rotations and shifts with XOR operations to ensure each input bit affects many output bits. Together, they make it computationally infeasible to reverse the hash or find collisions.\n",
+    "\n",
+    "## Solution Approach\n",
+    "\n",
+    "The solution uses Python's numpy library to ensure all operations are performed on 32-bit unsigned integers (np.uint32), as required by the SHA-256 specification. Each function follows the exact mathematical formulas from FIPS 180-4: the logical functions use AND (&), OR (|), XOR (^), and NOT (~) operators, while the rotation functions use helper functions ROTR (circular right rotation) and SHR (logical right shift). The ROTR operation is implemented using bit shifts and OR operations to wrap bits from the right end to the left, while SHR simply shifts bits right and fills with zeros. This approach ensures compatibility with the standard and produces verifiable results against known test vectors.\n",
     "\n",
     "## Functions to Implement:\n",
     "\n",
-    "1. `Parity(x, y, z)`\n",
-    "2. `Ch(x, y, z)`\n",
-    "3. `Maj(x, y, z)`\n",
+    "1. `Parity(x, y, z)` - XOR operation across three values\n",
+    "2. `Ch(x, y, z)` - Choice function (conditional bit selection)\n",
+    "3. `Maj(x, y, z)` - Majority function (returns majority bit value)\n",
     "4. `Sigma0(x)` - written as Σ₀²⁵⁶(x) in the standard\n",
     "5. `Sigma1(x)` - written as Σ₁²⁵⁶(x) in the standard\n",
     "6. `sigma0(x)` - written as σ₀²⁵⁶(x) in the standard\n",
@@ -87,6 +93,9 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -101,19 +110,35 @@
      "output_type": "stream",
      "text": [
       "Parity(12, 10, 6) = 0\n",
-      "Binary: 0b0\n"
+      "Binary: 0b0\n",
+      "Test 1.2: Parity(0, 0, 0) = 0 (Expected: 0)\n",
+      "Test 1.3: Parity(all 1s) = 0xffffffff (Expected: 0xffffffff)\n"
      ]
     }
    ],
    "source": [
-    "# Test the Parity function\n",
+    "# Test 1 the Parity function\n",
     "x = np.uint32(0b1100)\n",
     "y = np.uint32(0b1010)\n",
     "z = np.uint32(0b0110)\n",
     "\n",
     "result = Parity(x, y, z)\n",
     "print(f\"Parity({x}, {y}, {z}) = {result}\")\n",
-    "print(f\"Binary: {bin(result)}\")"
+    "print(f\"Binary: {bin(result)}\")\n",
+    "\n",
+    "\n",
+    "#Test 1.2: All zeros\n",
+    "x, y, z = np.uint32(0), np.uint32(0), np.uint32(0)\n",
+    "result = Parity(x, y, z)\n",
+    "print(f\"Test 1.2: Parity(0, 0, 0) = {result} (Expected: 0)\")\n",
+    "\n",
+    "# Test 1.3: All ones\n",
+    "x = np.uint32(0xFFFFFFFF)\n",
+    "y = np.uint32(0xFFFFFFFF)\n",
+    "z = np.uint32(0xFFFFFFFF)\n",
+    "result = Parity(x, y, z)\n",
+    "print(f\"Test 1.3: Parity(all 1s) = {hex(result)} (Expected: 0xffffffff)\")\n",
+    "\n"
    ]
   },
   {
@@ -127,19 +152,41 @@
      "output_type": "stream",
      "text": [
       "Ch(12, 10, 6) = 10\n",
-      "Binary: 0b1010\n"
+      "Binary: 0b1010\n",
+      "Test 2.2: Ch(all 1s, y, z) = 0x12345678 (Expected: 0x12345678)\n",
+      "Test 2.3: Ch(all 0s, y, z) = 0x9abcdef0 (Expected: 0x9abcdef0)\n",
+      "\n",
+      "======================================================================\n"
      ]
     }
    ],
    "source": [
-    "# Test the Ch function\n",
+    "# 2.Test the Ch function\n",
     "x = np.uint32(0b1100)\n",
     "y = np.uint32(0b1010)\n",
     "z = np.uint32(0b0110)\n",
     "\n",
     "result = Ch(x, y, z)\n",
     "print(f\"Ch({x}, {y}, {z}) = {result}\")\n",
-    "print(f\"Binary: {bin(result)}\")"
+    "print(f\"Binary: {bin(result)}\")\n",
+    "\n",
+    "# Test 2.2 : x all ones (chooses y)\n",
+    "x = np.uint32(0xFFFFFFFF)\n",
+    "y = np.uint32(0x12345678)\n",
+    "z = np.uint32(0x9ABCDEF0)\n",
+    "result = Ch(x, y, z)\n",
+    "print(f\"Test 2.2: Ch(all 1s, y, z) = {hex(result)} (Expected: 0x12345678)\")\n",
+    "\n",
+    "# Test 2.3: x all zeros (chooses z)\n",
+    "x = np.uint32(0)\n",
+    "y = np.uint32(0x12345678)\n",
+    "z = np.uint32(0x9ABCDEF0)\n",
+    "result = Ch(x, y, z)\n",
+    "print(f\"Test 2.3: Ch(all 0s, y, z) = {hex(result)} (Expected: 0x9abcdef0)\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
