adding majority function

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -90,6 +90,31 @@
     "    x, y, z = np.uint32(x), np.uint32(y), np.uint32(z)\n",
     "    # Where x is 1, choose y; where x is 0, choose z\n",
     "    return np.uint32((x & y) ^ (~x & z))\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# PART 3: Majority (Maj) Function\n",
+    "# ----------------------------------------------------------------------------\n",
+    "\n",
+    "def maj(x, y , z):\n",
+    "    \"\"\"\n",
+    "     Majority function from SHA-256 specification.\n",
+    "    \n",
+    "    For each bit position, returns 1 if at least two of the\n",
+    "    three corresponding bits in x, y, z are 1.\n",
+    "    \n",
+    "    Formula: (x ∧ y) ⊕ (x ∧ z) ⊕ (y ∧ z)\n",
+    "    \n",
+    "    Used in: SHA-256 compression function (Step 2 of each round)\n",
+    "    \n",
+    "    Args:\n",
+    "        x, y, z: 32-bit unsigned integers\n",
+    "    \n",
+    "    Returns:\n",
+    "        np.uint32: Result of the majority operation\n",
+    "    \"\"\"\n",
+    "    # Convert all inputs to 32-bit unsigned integers\n",
+    "    x, y, z = np.uint32(x), np.uint32(y), np.uint32(z)\n",
+    "    # Return 1 where at least 2 of the 3 bits are 1\n",
+    "    return np.uint32((x & y) ^ (x & z) ^ (y & z))\n",
     "\n",
     "\n",
     "\n",
