--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
     "# PART 3: Majority (Maj) Function\n",
     "# ----------------------------------------------------------------------------\n",
     "\n",
-    "def maj(x, y , z):\n",
+    "def Maj(x, y , z):\n",
     "    \"\"\"\n",
     "     Majority function from SHA-256 specification.\n",
     "    \n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "55444694",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -212,6 +212,64 @@
     "print(\"\\n\" + \"=\" * 70)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cebc27f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- PART 3: Maj (Majority) Function Tests ---\n",
+      "Test 3.1: Maj(12, 10, 6) = 14\n",
+      "         Binary: 0b1110\n",
+      "Test 3.2: Maj(0, 0, 0) = 0 (Expected: 0)\n",
+      "Test 3.3: Maj(all 1s) = 0xffffffff (Expected: 0xffffffff)\n",
+      "Test 3.4: Maj(1s, 1s, 0s) = 0xffffffff (Expected: 0xffffffff)\n",
+      "\n",
+      "======================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ----------------------------------------------------------------------------\n",
+    "# PART 3: Maj (Majority) Function Tests\n",
+    "# ----------------------------------------------------------------------------\n",
+    "print(\"\\n--- PART 3: Maj (Majority) Function Tests ---\")\n",
+    "\n",
+    "# Test 3.1: Basic test\n",
+    "x = np.uint32(0b1100)\n",
+    "y = np.uint32(0b1010)\n",
+    "z = np.uint32(0b0110)\n",
+    "result = Maj(x, y, z)\n",
+    "print(f\"Test 3.1: Maj({x}, {y}, {z}) = {result}\")\n",
+    "print(f\"         Binary: {bin(result)}\")\n",
+    "\n",
+    "# Test 3.2: All zeros\n",
+    "x, y, z = np.uint32(0), np.uint32(0), np.uint32(0)\n",
+    "result = Maj(x, y, z)\n",
+    "print(f\"Test 3.2: Maj(0, 0, 0) = {result} (Expected: 0)\")\n",
+    "\n",
+    "# Test 3.3: All ones\n",
+    "x = np.uint32(0xFFFFFFFF)\n",
+    "y = np.uint32(0xFFFFFFFF)\n",
+    "z = np.uint32(0xFFFFFFFF)\n",
+    "result = Maj(x, y, z)\n",
+    "print(f\"Test 3.3: Maj(all 1s) = {hex(result)} (Expected: 0xffffffff)\")\n",
+    "\n",
+    "# Test 3.4: Two agree on 1s (majority wins)\n",
+    "x = np.uint32(0xFFFFFFFF)\n",
+    "y = np.uint32(0xFFFFFFFF)\n",
+    "z = np.uint32(0x00000000)\n",
+    "result = Maj(x, y, z)\n",
+    "print(f\"Test 3.4: Maj(1s, 1s, 0s) = {hex(result)} (Expected: 0xffffffff)\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n"
    ]
   }
  ],
