Rotate right function

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -115,6 +115,26 @@
     "    x, y, z = np.uint32(x), np.uint32(y), np.uint32(z)\n",
     "    # Return 1 where at least 2 of the 3 bits are 1\n",
     "    return np.uint32((x & y) ^ (x & z) ^ (y & z))\n",
+    "\n",
+    "# ============================================================================\n",
+    "# HELPER FUNCTIONS: ROTR (Rotate Right) and SHR (Shift Right)\n",
+    "# ============================================================================\n",
+    "\n",
+    "def ROTR(n, x):\n",
+    "    \"\"\"\n",
+    "    Rotate right (circular right shift) operation.\n",
+    "    \n",
+    "    Bits shifted off the right end wrap around to the left.\n",
+    "    \n",
+    "    Args:\n",
+    "        n: Number of positions to rotate\n",
+    "        x: 32-bit unsigned integer\n",
+    "    \n",
+    "    Returns:\n",
+    "        np.uint32: x rotated right by n positions\n",
+    "    \"\"\"\n",
+    "    x = np.uint32(x)\n",
+    "    return np.uint32((x >> n) | (x << (32 - n)))\n",
     "\n",
     "\n",
     "\n",
