Shift Right function

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -136,6 +136,22 @@
     "    x = np.uint32(x)\n",
     "    return np.uint32((x >> n) | (x << (32 - n)))\n",
     "\n",
+    "def SHR(n, x):\n",
+    "    \"\"\"\n",
+    "    Shift right (logical right shift) operation.\n",
+    "    \n",
+    "    Bits shifted off the right are lost, zeros fill from the left.\n",
+    "    \n",
+    "    Args:\n",
+    "        n: Number of positions to shift\n",
+    "        x: 32-bit unsigned integer\n",
+    "    \n",
+    "    Returns:\n",
+    "        np.uint32: x shifted right by n positions\n",
+    "    \"\"\"\n",
+    "    x = np.uint32(x)\n",
+    "    return np.uint32(x >> \n",
+    "\n",
     "\n",
     "\n",
     "\n",
