part 4 sigma0 function

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -150,7 +150,32 @@
     "        np.uint32: x shifted right by n positions\n",
     "    \"\"\"\n",
     "    x = np.uint32(x)\n",
-    "    return np.uint32(x >> \n",
+    "    return np.uint32(x >> n )\n",
+    "\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# PART 4: Sigma0 Function (Uppercase Σ₀²⁵⁶)\n",
+    "# ----------------------------------------------------------------------------\n",
+    "def Sigma0(x):\n",
+    "    \"\"\"\n",
+    "    Sigma0 function from SHA-256 specification.\n",
+    "    \n",
+    "    Combines three rotations of x with XOR operation.\n",
+    "    Formula: ROTR²(x) ⊕ ROTR¹³(x) ⊕ ROTR²²(x)\n",
+    "    \n",
+    "    Used in: SHA-256 compression function for computing temp2 value\n",
+    "    \n",
+    "    Args:\n",
+    "        x: 32-bit unsigned integer\n",
+    "    \n",
+    "    Returns:\n",
+    "        np.uint32: Result of Sigma0 operation\n",
+    "    \"\"\"\n",
+    "    x = np.uint32(x)\n",
+    "    # XOR of three different rotations\n",
+    "    return np.uint32(ROTR(2, x) ^ ROTR(13, x) ^ ROTR(22, x))\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
