--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "55444694",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -331,6 +331,52 @@
     "print(f\"Test 3.4: Maj(1s, 1s, 0s) = {hex(result)} (Expected: 0xffffffff)\")\n",
     "\n",
     "print(\"\\n\" + \"=\" * 70)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7185c87a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- PART 4: Sigma0 (Uppercase Σ₀) Function Tests ---\n",
+      "Test 4.1: Sigma0(0x12345678) = 0x66146474\n",
+      "Test 4.2: Sigma0(0) = 0 (Expected: 0)\n",
+      "Test 4.3: Sigma0(all 1s) = 0xffffffff (Expected: 0xffffffff)\n",
+      "Test 4.4: Sigma0(0xAAAAAAAA) = 0x55555555\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ----------------------------------------------------------------------------\n",
+    "# PART 4: Sigma0 Function Tests\n",
+    "# ----------------------------------------------------------------------------\n",
+    "print(\"\\n--- PART 4: Sigma0 (Uppercase Σ₀) Function Tests ---\")\n",
+    "\n",
+    "# Test 4.1: Basic test\n",
+    "x = np.uint32(0x12345678)\n",
+    "result = Sigma0(x)\n",
+    "print(f\"Test 4.1: Sigma0(0x12345678) = {hex(result)}\")\n",
+    "\n",
+    "# Test 4.2: All zeros\n",
+    "x = np.uint32(0)\n",
+    "result = Sigma0(x)\n",
+    "print(f\"Test 4.2: Sigma0(0) = {result} (Expected: 0)\")\n",
+    "\n",
+    "# Test 4.3: All ones\n",
+    "x = np.uint32(0xFFFFFFFF)\n",
+    "result = Sigma0(x)\n",
+    "print(f\"Test 4.3: Sigma0(all 1s) = {hex(result)} (Expected: 0xffffffff)\")\n",
+    "\n",
+    "# Test 4.4: Alternating bits\n",
+    "x = np.uint32(0xAAAAAAAA)\n",
+    "result = Sigma0(x)\n",
+    "print(f\"Test 4.4: Sigma0(0xAAAAAAAA) = {hex(result)}\")"
    ]
   }
  ],
