--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -174,14 +174,27 @@
     "    # XOR of three different rotations\n",
     "    return np.uint32(ROTR(2, x) ^ ROTR(13, x) ^ ROTR(22, x))\n",
     "\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# PART 5: Sigma1 Function (Uppercase Σ₁²⁵⁶)\n",
+    "# ----------------------------------------------------------------------------\n",
     "\n",
+    "def Sigma1(x):\n",
+    "    \"\"\n",
     "\n",
+    "    Sigma1 function from SBA-256 specification.\n",
+    "    Formula :  ROTR^6(x) XOR ROTR^11(x) XOR ROTR^25(x)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "    Used in: SHA-256 compression function for computing temp1 value\n",
+    "    \n",
+    "    Args:\n",
+    "        x: 32-bit unsigned integer\n",
+    "    \n",
+    "    Returns:\n",
+    "        np.uint32: Result of Sigma1 operation\n",
+    "    \"\"\"\n",
+    "    x = np.uint32(x)\n",
+    "    # XOR of three different rotations\n",
+    "    return np.uint32(ROTR(6, x) ^ ROTR(11, x) ^ ROTR(25, x))\n",
     "\n"
    ]
   },
