--- a/problems.ipynb
+++ b/problems.ipynb
@@ -179,9 +179,9 @@
     "# ----------------------------------------------------------------------------\n",
     "\n",
     "def Sigma1(x):\n",
-    "    \"\"\n",
+    "    \"\"\"\n",
     "\n",
-    "    Sigma1 function from SBA-256 specification.\n",
+    "    Sigma1 function from SHA-256 specification.\n",
     "    Formula :  ROTR^6(x) XOR ROTR^11(x) XOR ROTR^25(x)\n",
     "\n",
     "    Used in: SHA-256 compression function for computing temp1 value\n",
