--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -390,6 +390,52 @@
     "x = np.uint32(0xAAAAAAAA)\n",
     "result = Sigma0(x)\n",
     "print(f\"Test 4.4: Sigma0(0xAAAAAAAA) = {hex(result)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9aedf282",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- PART 5: Sigma1 (Uppercase Σ₁) Function Tests ---\n",
+      "Test 5.1: Sigma1(0x12345678) = 0x3561abda\n",
+      "Test 5.2: Sigma1(0) = 0 (Expected: 0)\n",
+      "Test 5.3: Sigma1(all 1s) = 0xffffffff (Expected: 0xffffffff)\n",
+      "Test 5.4: Sigma1(0xAAAAAAAA) = 0xaaaaaaaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ----------------------------------------------------------------------------\n",
+    "# PART 5: Sigma1 Function Tests\n",
+    "# ----------------------------------------------------------------------------\n",
+    "print(\"\\n--- PART 5: Sigma1 (Uppercase Σ₁) Function Tests ---\")\n",
+    "\n",
+    "# Test 5.1: Basic test\n",
+    "x = np.uint32(0x12345678)\n",
+    "result = Sigma1(x)\n",
+    "print(f\"Test 5.1: Sigma1(0x12345678) = {hex(result)}\")\n",
+    "\n",
+    "# Test 5.2: All zeros\n",
+    "x = np.uint32(0)\n",
+    "result = Sigma1(x)\n",
+    "print(f\"Test 5.2: Sigma1(0) = {result} (Expected: 0)\")\n",
+    "\n",
+    "# Test 5.3: All ones\n",
+    "x = np.uint32(0xFFFFFFFF)\n",
+    "result = Sigma1(x)\n",
+    "print(f\"Test 5.3: Sigma1(all 1s) = {hex(result)} (Expected: 0xffffffff)\")\n",
+    "\n",
+    "# Test 5.4: Alternating bits\n",
+    "x = np.uint32(0xAAAAAAAA)\n",
+    "result = Sigma1(x)\n",
+    "print(f\"Test 5.4: Sigma1(0xAAAAAAAA) = {hex(result)}\")"
    ]
   }
  ],
