--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -460,6 +460,52 @@
     "x = np.uint32(0xAAAAAAAA)\n",
     "result = Sigma1(x)\n",
     "print(f\"Test 5.4: Sigma1(0xAAAAAAAA) = {hex(result)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8efc88b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- PART 6: sigma0 (Lowercase σ₀) Function Tests ---\n",
+      "Test 6.1: sigma0(0x12345678) = 0xe7fce6ee\n",
+      "Test 6.2: sigma0(0) = 0 (Expected: 0)\n",
+      "Test 6.3: sigma0(all 1s) = 0x1fffffff\n",
+      "Test 6.4: sigma0(0x80000000) = 0x11002000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ----------------------------------------------------------------------------\n",
+    "# PART 6: sigma0 Function Tests\n",
+    "# ----------------------------------------------------------------------------\n",
+    "print(\"\\n--- PART 6: sigma0 (Lowercase σ₀) Function Tests ---\")\n",
+    "\n",
+    "# Test 6.1: Basic test\n",
+    "x = np.uint32(0x12345678)\n",
+    "result = sigma0(x)\n",
+    "print(f\"Test 6.1: sigma0(0x12345678) = {hex(result)}\")\n",
+    "\n",
+    "# Test 6.2: All zeros\n",
+    "x = np.uint32(0)\n",
+    "result = sigma0(x)\n",
+    "print(f\"Test 6.2: sigma0(0) = {result} (Expected: 0)\")\n",
+    "\n",
+    "# Test 6.3: All ones\n",
+    "x = np.uint32(0xFFFFFFFF)\n",
+    "result = sigma0(x)\n",
+    "print(f\"Test 6.3: sigma0(all 1s) = {hex(result)}\")\n",
+    "\n",
+    "# Test 6.4: Power of 2\n",
+    "x = np.uint32(0x80000000)\n",
+    "result = sigma0(x)\n",
+    "print(f\"Test 6.4: sigma0(0x80000000) = {hex(result)}\")"
    ]
   }
  ],
