--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,32 @@
     "    \"\"\"\n",
     "    x = np.uint32(x)\n",
     "    # XOR of two rotations and one shift\n",
-    "    return np.uint32(ROTR(7, x) ^ ROTR(18, x) ^ SHR(3, x))\n"
+    "    return np.uint32(ROTR(7, x) ^ ROTR(18, x) ^ SHR(3, x))\n",
+    "\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# PART 7: sigma1 Function (Lowercase σ₁²⁵⁶)\n",
+    "# ----------------------------------------------------------------------------\n",
+    "def sigma1(x):\n",
+    "    \"\"\"\n",
+    "    sigma1 (lowercase) function from SHA-256 specification.\n",
+    "    \n",
+    "    Combines two rotations and one shift with XOR operation.\n",
+    "    Formula: ROTR^17(x) XOR ROTR^19(x) XOR SHR^10(x)\n",
+    "    \n",
+    "    Note: Uses SHR (shift) for the third operation, not ROTR (rotate)\n",
+    "    \n",
+    "    Used in: SHA-256 message schedule expansion (extending 16 words to 64 words)\n",
+    "    \n",
+    "    Args:\n",
+    "        x: 32-bit unsigned integer\n",
+    "    \n",
+    "    Returns:\n",
+    "        np.uint32: Result of sigma1 operation\n",
+    "    \"\"\"\n",
+    "    x = np.uint32(x)\n",
+    "    # XOR of two rotations and one shift\n",
+    "    return np.uint32(ROTR(17, x) ^ ROTR(19, x) ^ SHR(10, x))\n",
+    "\n"
    ]
   },
   {
