--- a/problems.ipynb
+++ b/problems.ipynb
@@ -532,6 +532,29 @@
     "result = sigma0(x)\n",
     "print(f\"Test 6.4: sigma0(0x80000000) = {hex(result)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9606eb9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ----------------------------------------------------------------------------\n",
+    "# PART 7: sigma1 Function Tests\n",
+    "# ----------------------------------------------------------------------------\n",
+    "print(\"\\n--- PART 7: sigma1 (Lowercase σ₁) Function Tests ---\")\n",
+    "\n",
+    "# Test 7.1: Basic test\n",
+    "x = np.uint32(0x12345678)\n",
+    "result = sigma1(x)\n",
+    "print(f\"Test 7.1: sigma1(0x12345678) = {hex(result)}\")\n",
+    "\n",
+    "# Test 7.2: All zeros\n",
+    "x = np.uint32(0)\n",
+    "result = sigma1(x)\n",
+    "print(f\"Test 7.2: sigma1(0) = {result} (Expected: 0)\")"
+   ]
   }
  ],
  "metadata": {
