extra part 7 tests and problem 1 finish

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "55444694",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "7185c87a",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "9aedf282",
    "metadata": {},
    "outputs": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "8efc88b1",
    "metadata": {},
    "outputs": [
@@ -535,10 +535,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9606eb9e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- PART 7: sigma1 (Lowercase σ₁) Function Tests ---\n",
+      "Test 7.1: sigma1(0x12345678) = 0xa1f78649\n",
+      "Test 7.2: sigma1(0) = 0 (Expected: 0)\n",
+      "Test 7.3: sigma1(all 1s) = 0x3fffff\n",
+      "Test 7.4: sigma1(0x80000000) = 0x205000\n",
+      "\n",
+      "======================================================================\n",
+      "ALL PROBLEM 1 FUNCTIONS COMPLETE!\n",
+      "======================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "# ----------------------------------------------------------------------------\n",
     "# PART 7: sigma1 Function Tests\n",
@@ -553,7 +570,21 @@
     "# Test 7.2: All zeros\n",
     "x = np.uint32(0)\n",
     "result = sigma1(x)\n",
-    "print(f\"Test 7.2: sigma1(0) = {result} (Expected: 0)\")"
+    "print(f\"Test 7.2: sigma1(0) = {result} (Expected: 0)\")\n",
+    "\n",
+    "# Test 7.3: All ones\n",
+    "x = np.uint32(0xFFFFFFFF)\n",
+    "result = sigma1(x)\n",
+    "print(f\"Test 7.3: sigma1(all 1s) = {hex(result)}\")\n",
+    "\n",
+    "# Test 7.4: Power of 2\n",
+    "x = np.uint32(0x80000000)\n",
+    "result = sigma1(x)\n",
+    "print(f\"Test 7.4: sigma1(0x80000000) = {hex(result)}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"ALL PROBLEM 1 FUNCTIONS COMPLETE!\")\n",
+    "print(\"=\" * 70)"
    ]
   }
  ],
