--- a/problems.ipynb
+++ b/problems.ipynb
@@ -586,6 +586,48 @@
     "print(\"ALL PROBLEM 1 FUNCTIONS COMPLETE!\")\n",
     "print(\"=\" * 70)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95cdaded",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "This problem successfully implemented all seven bitwise functions required for the SHA-256 algorithm as specified in FIPS 180-4. The logical functions (Parity, Ch, Maj) provide non-linear bit mixing through conditional operations and majority voting, while the rotation functions (Sigma0, Sigma1, sigma0, sigma1) create diffusion by combining multiple rotations and shifts with XOR operations. All functions were tested with multiple test cases including edge cases (all zeros, all ones, and specific bit patterns) to verify correctness against the specification. The implementation uses numpy's uint32 type to ensure proper 32-bit arithmetic and modulo 2^32 behavior. These seven functions form the cryptographic foundation for the complete SHA-256 hash algorithm that will be implemented in subsequent problems."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fba18a13",
+   "metadata": {},
+   "source": [
+    "## Problem 2: Fractional Parts of Cube Roots\n",
+    "\n",
+    "### Introduction\n",
+    "\n",
+    "This problem calculates the constants used in the SHA-256 message schedule, specifically the round constants K. These constants are derived from the first 32 bits of the fractional parts of the cube roots of the first 64 prime numbers. Using mathematical constants like these ensures that the values are \"nothing up my sleeve\" numbers - they're derived from a transparent mathematical process rather than arbitrary choices, which is important for cryptographic security and trust in the algorithm.\n",
+    "\n",
+    "### Solution Approach\n",
+    "\n",
+    "The solution implements a prime number generator using trial division, calculates cube roots using numpy's cbrt function, extracts the fractional part by subtracting the integer part, and then converts the fractional part to a 32-bit hexadecimal representation by multiplying by 2^32. The results are verified against the constants listed in FIPS 180-4 (page 11) to ensure correctness.\n",
+    "\n",
+    "### References\n",
+    "\n",
+    "**FIPS 180-4: Secure Hash Standard**\n",
+    "- National Institute of Standards and Technology (NIST)\n",
+    "- URL: https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf\n",
+    "- Section 4.2.2, Page 11 - SHA-256 Constants\n",
+    "- Relevance: Official specification listing the 64 round constants derived from cube roots of the first 64 primes.\n",
+    "\n",
+    "**Wikipedia - Nothing-up-my-sleeve number**\n",
+    "- URL: https://en.wikipedia.org/wiki/Nothing-up-my-sleeve_number\n",
+    "- Relevance: Explains why cryptographic algorithms use mathematically derived constants rather than arbitrary values to prevent hidden backdoors and increase trust.\n",
+    "\n",
+    "**Wikipedia - Prime number**\n",
+    "- URL: https://en.wikipedia.org/wiki/Prime_number\n",
+    "- Relevance: Provides background on prime number properties and generation algorithms used in this implementation."
+   ]
   }
  ],
  "metadata": {
