Implement prime number generator for problem 2

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "55444694",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "7185c87a",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "9aedf282",
    "metadata": {},
    "outputs": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "8efc88b1",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "9606eb9e",
    "metadata": {},
    "outputs": [
@@ -627,6 +627,109 @@
     "**Wikipedia - Prime number**\n",
     "- URL: https://en.wikipedia.org/wiki/Prime_number\n",
     "- Relevance: Provides background on prime number properties and generation algorithms used in this implementation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "4f56ab7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "PROBLEM 2: Testing Prime Number Generator\n",
+      "======================================================================\n",
+      "\n",
+      "First 10 primes: [2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n",
+      "Expected: [2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n",
+      "\n",
+      "First 20 primes: [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71]\n",
+      "\n",
+      "First 64 primes generated successfully!\n",
+      "First prime: 2, Last prime: 311\n",
+      "======================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ============================================================================\n",
+    "# PROBLEM 2: Fractional Parts of Cube Roots\n",
+    "# ============================================================================\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# STEP 1: Prime Number Generator\n",
+    "# ----------------------------------------------------------------------------\n",
+    "\n",
+    "def primes(n):\n",
+    "    \"\"\"\n",
+    "    Generate the first n prime numbers.\n",
+    "    \n",
+    "    Uses trial division method: checks if each candidate number\n",
+    "    is divisible by any previously found primes.\n",
+    "    \n",
+    "    Args:\n",
+    "        n: Number of primes to generate\n",
+    "    \n",
+    "    Returns:\n",
+    "        list: List of the first n prime numbers\n",
+    "    \n",
+    "    Example:\n",
+    "        >>> primes(5)\n",
+    "        [2, 3, 5, 7, 11]\n",
+    "    \"\"\"\n",
+    "    if n <= 0:\n",
+    "        return []\n",
+    "    \n",
+    "    prime_list = []  # Store found primes\n",
+    "    candidate = 2    # Start checking from 2 (first prime)\n",
+    "    \n",
+    "    while len(prime_list) < n:\n",
+    "        is_prime = True\n",
+    "        \n",
+    "        # Check if candidate is divisible by any existing prime\n",
+    "        for prime in prime_list:\n",
+    "            if candidate % prime == 0:\n",
+    "                is_prime = False\n",
+    "                break\n",
+    "            # Optimization: only check up to sqrt(candidate)\n",
+    "            if prime * prime > candidate:\n",
+    "                break\n",
+    "        \n",
+    "        if is_prime:\n",
+    "            prime_list.append(candidate)\n",
+    "        \n",
+    "        candidate += 1\n",
+    "    \n",
+    "    return prime_list\n",
+    "\n",
+    "\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# Test the Prime Generator\n",
+    "# ----------------------------------------------------------------------------\n",
+    "print(\"=\" * 70)\n",
+    "print(\"PROBLEM 2: Testing Prime Number Generator\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# Test with first 10 primes\n",
+    "first_10 = primes(10)\n",
+    "print(f\"\\nFirst 10 primes: {first_10}\")\n",
+    "print(f\"Expected: [2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\")\n",
+    "\n",
+    "# Test with first 20 primes\n",
+    "first_20 = primes(20)\n",
+    "print(f\"\\nFirst 20 primes: {first_20}\")\n",
+    "\n",
+    "# Generate the 64 primes we need for SHA-256\n",
+    "first_64 = primes(64)\n",
+    "print(f\"\\nFirst 64 primes generated successfully!\")\n",
+    "print(f\"First prime: {first_64[0]}, Last prime: {first_64[-1]}\")\n",
+    "\n",
+    "print(\"=\" * 70)\n"
    ]
   }
  ],
