Calculate cube roots and extract fractional parts for problem 2

--- a/problems.ipynb
+++ b/problems.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "7308bdba",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "55444694",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "1c6a4070",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "cebc27f3",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "7185c87a",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "9aedf282",
    "metadata": {},
    "outputs": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "8efc88b1",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "9606eb9e",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "4f56ab7c",
    "metadata": {},
    "outputs": [
@@ -650,6 +650,19 @@
       "\n",
       "First 64 primes generated successfully!\n",
       "First prime: 2, Last prime: 311\n",
+      "======================================================================\n",
+      "\n",
+      "======================================================================\n",
+      "Calculating Cube Roots of First 64 Primes\n",
+      "======================================================================\n",
+      "Prime   2: cbrt = 1.2599210499, fractional part = 0.2599210499\n",
+      "Prime   3: cbrt = 1.4422495703, fractional part = 0.4422495703\n",
+      "Prime   5: cbrt = 1.7099759467, fractional part = 0.7099759467\n",
+      "Prime   7: cbrt = 1.9129311828, fractional part = 0.9129311828\n",
+      "Prime  11: cbrt = 2.2239800906, fractional part = 0.2239800906\n",
+      "\n",
+      "... (calculated for all 64 primes)\n",
+      "Total fractional parts calculated: 64\n",
       "======================================================================\n"
      ]
     }
@@ -729,7 +742,40 @@
     "print(f\"\\nFirst 64 primes generated successfully!\")\n",
     "print(f\"First prime: {first_64[0]}, Last prime: {first_64[-1]}\")\n",
     "\n",
-    "print(\"=\" * 70)\n"
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# STEP 2: Calculate Cube Roots and Extract Fractional Parts\n",
+    "# ----------------------------------------------------------------------------\n",
+    "\n",
+    "# Get the first 64 primes\n",
+    "primes_64 = primes(64)\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"Calculating Cube Roots of First 64 Primes\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "# Calculate cube roots and extract fractional parts\n",
+    "cube_roots = []\n",
+    "fractional_parts = []\n",
+    "\n",
+    "for i, prime in enumerate(primes_64):\n",
+    "    # Calculate cube root\n",
+    "    cbrt = np.cbrt(prime)\n",
+    "    \n",
+    "    # Extract fractional part (remove integer part)\n",
+    "    frac = cbrt - int(cbrt)\n",
+    "    \n",
+    "    cube_roots.append(cbrt)\n",
+    "    fractional_parts.append(frac)\n",
+    "    \n",
+    "    # Display first 5 as examples\n",
+    "    if i < 5:\n",
+    "        print(f\"Prime {prime:3d}: cbrt = {cbrt:.10f}, fractional part = {frac:.10f}\")\n",
+    "\n",
+    "print(f\"\\n... (calculated for all 64 primes)\")\n",
+    "print(f\"Total fractional parts calculated: {len(fractional_parts)}\")\n",
+    "print(\"=\" * 70)"
    ]
   }
  ],
